# urbackup-server-python-web-api-wrapper

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: integration-tests.yml  publish.yml
test/: list_backup_counts.py  stop_all.py  urbackup_api_test.py
tests/: conftest.py  test_backups.py  test_clients.py  test_extra_clients.py  test_installer.py  test_livelog.py  test_login.py  test_new_backups.py  test_new_clients.py  test_new_extra_clients.py  test_new_installer.py  test_new_livelog.py  test_new_settings.py  test_new_status.py  test_new_users_groups.py  test_settings.py  test_status.py  test_users_groups.py
urbackup_api/: __init__.py  _base.py  _common.py  _legacy.py  _typed.py
