[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbackup-server-web-api-wrapper"
version = "0.2.3"
description = "Python wrapper to access and control an UrBackup server"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Martin Raiber", email = "martin@urbackup.org" },
]
keywords = ["urbackup", "web", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
]

[project.urls]
Homepage = "https://github.com/uroni/urbackup-server-python-web-api-wrapper"

[project.optional-dependencies]
dev = []
test = []

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
